added new controllers for hotel and room